removed white space & fixed btns

--- a/public/css/result.css
+++ b/public/css/result.css
@@ -37,7 +37,7 @@ body {
     margin:0px;
     padding:0px;
     min-width:100%;
-    height:5%;
+    height:4%;
 }
 #menu-container div{
     margin:0px;
@@ -47,8 +47,8 @@ body {
     margin:0px;
     padding:0px;
     max-width:100%;
-    height:100%;
-    max-height:100%;
+    height:96%;
+    max-height:96%;
     display:flex;
 }
 div.modal-header {
@@ -102,7 +102,7 @@ span.ms1EnvFile{
     background-color: #555555;
     color: white;
     border: none;
-    padding: 2px 10px;
+    padding: 2px 5px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -564,21 +564,22 @@ button#graph-full-screen{
   /*override default jumbotron style*/
 #left-jumbotron{
     margin: 0px;
-    height:95%;
+    height:100%;
     width:50%;
     background-color: #EEEEEE;
   }
 #right-jumbotron{
     margin: 0px;
-    height:95%;
+    height:100%;
     width:50%;
     background-color: #EEEEEE;
 }
 #envInfo{
-    height:35%;
+    height:30%;
+    max-height: 30%;
     overflow:auto;
     padding:0px;
-    margin:25px 0px 0px 0px;
+    margin:10px 0px 0px 0px;
     position:relative;
 }
 #scanLevelOne{
